--- a/header.css
+++ b/header.css
@@ -127,7 +127,7 @@ body {
 }
 @media (min-width: 576px) {
     .container {
-        max-width: 540px;
+        max-width: 720px;
     }
 }
 .container {
@@ -247,8 +247,8 @@ dl, ol, ul {
     }
     @media (min-width: 992px) {
         .navbar-expand-lg .navbar-nav .nav-link {
-            padding-right: .5rem;
             padding-left: .5rem;
+            padding-right: .5rem;
         }
     }
     .navbar-nav .nav-link {
@@ -443,30 +443,10 @@ html body .font-14 {
 }
 
 
-.footer2 .f2-topbar {
+/* .footer2 .f2-topbar {
     padding-bottom: 20px;
     border-bottom: 1px solid rgba(120, 130, 140, 0.13);
-}
-@media (min-width: 1200px) {
-    .container {
-        max-width: 1140px;
-    }
-}
-@media (min-width: 992px) {
-    .container {
-        max-width: 960px;
-    }
-}
-@media (min-width: 768px) {
-    .container {
-        max-width: 720px;
-    }
-}
-@media (min-width: 576px) {
-    .container {
-        max-width: 540px;
-    }
-}
+} */
 
 .footer2 .container{
     width: 100%;
